# MPI-EXAMPLES

./: CMakeLists.txt  compare_graphics.py  config.json  main.cpp  main.py  main_comparison.cpp  main_mpi.cpp  main_posix.cpp  main_sequential.cpp
input_files/: 1_file eng.txt  1_file rus.txt  2_1984.txt  2_The Haunted Man and the Ghost's Bargain.txt  3_The Haunted Man and the Ghost's Bargain_x10.txt
methods/: my_text_processor.cpp  my_text_processor.h
